[gd_scene load_steps=5 format=3 uid="uid://68vjwfxquvlf"]

[ext_resource type="Script" path="res://addons/table_data_editor/src/table_data_editor/table_data_editor.gd" id="1_j3oce"]
[ext_resource type="Script" path="res://addons/table_data_editor/src/table_data_editor/menu/menu_list.gd" id="2_jsb7y"]
[ext_resource type="PackedScene" uid="uid://ctppgkl2dpksd" path="res://addons/table_data_editor/src/table_data_editor/table_edit/table_edit.tscn" id="3_87xax"]
[ext_resource type="PackedScene" uid="uid://cqpmbxqgny2kq" path="res://addons/table_data_editor/src/table_data_editor/export_preview/export_preview_window.tscn" id="4_8p413"]

[node name="table_data_editor" type="MarginContainer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
script = ExtResource("1_j3oce")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="menu_list" type="MenuBar" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 1
flat = true
script = ExtResource("2_jsb7y")

[node name="GridContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 120

[node name="pages" type="ItemList" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="table_edit" parent="VBoxContainer/GridContainer" instance=ExtResource("3_87xax")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="scroll_pos" type="LineEdit" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_mode = 1
text = "(1, 1)"
alignment = 1
select_all_on_focus = true

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2

[node name="Control" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/Control"]
layout_mode = 2
button_pressed = true
text = "Double click edit"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2

[node name="file_path_label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "双击打开所在文件目录"
focus_mode = 1
mouse_filter = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2

[node name="saved_status_label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.625)
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 1
text = "(saved)"

[node name="export_preview_window" parent="." node_paths=PackedStringArray("table_data_editor") instance=ExtResource("4_8p413")]
unique_name_in_owner = true
position = Vector2i(0, -500)
visible = false
table_data_editor = NodePath("..")

[node name="confirm_dialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true

[node name="tooltip_dialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
gui_embed_subwindows = true
title = "Help"
size = Vector2i(500, 317)

[node name="MarginContainer" type="MarginContainer" parent="tooltip_dialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="tooltip_dialog/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "双击单元格进行编辑

按住 Alt 键进行左右滚动，松开即可上下滚动"

[node name="save_as_dialog" type="FileDialog" parent="."]
unique_name_in_owner = true
filters = PackedStringArray("*.gdata; GData")

[node name="open_file_dialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
size = Vector2i(312, 157)
ok_button_text = "打开"
file_mode = 0
filters = PackedStringArray("*.gdata; GData")

[node name="import_dialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
size = Vector2i(295, 161)
ok_button_text = "打开"
file_mode = 0
access = 2
filters = PackedStringArray("*.csv; CSV")

[connection signal="menu_pressed" from="VBoxContainer/menu_list" to="." method="_on_menu_list_menu_pressed"]
[connection signal="cell_value_changed" from="VBoxContainer/GridContainer/table_edit" to="." method="_on_table_edit_cell_value_changed"]
[connection signal="popup_edit_box_size_changed" from="VBoxContainer/GridContainer/table_edit" to="." method="_on_table_edit_popup_edit_box_size_changed"]
[connection signal="scroll_changed" from="VBoxContainer/GridContainer/table_edit" to="." method="_on_table_edit_scroll_changed"]
[connection signal="text_submitted" from="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/scroll_pos" to="." method="_on_scroll_pos_text_submitted"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/Control/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="gui_input" from="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/file_path_label" to="." method="_on_file_path_label_gui_input"]
[connection signal="exported" from="export_preview_window" to="." method="_on_export_preview_window_exported"]
[connection signal="confirmed" from="confirm_dialog" to="." method="_new_file"]
[connection signal="file_selected" from="save_as_dialog" to="." method="_on_save_as_dialog_file_selected"]
[connection signal="file_selected" from="open_file_dialog" to="." method="_on_open_file_dialog_file_selected"]
[connection signal="file_selected" from="import_dialog" to="." method="import_file"]
